# backend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  Procfile  Pulumi.yaml  README.md  coily.yaml  config.yml  deployment.yaml  emojis.json  index.ts  nlp_ignore.yml  notebook.ipynb  package-lock.json  package.json  procfile.sh  pyproject.toml  requirements.txt  stopwords.yml  tasks.py  test.py  tsconfig.json
.coily/: coily.yaml
.github/: action.yml
.github/workflows/: build-and-publish.yml  deploy.yml  main.yml  publish.yml  trufflehog.yml
backend/: application.py  bsky.py  cache.py  cli.py  main.py  telemetry.py  worker.py
deploy/: main.yaml  main.yml  secrets-cert.yaml
docs/: FEATURES.md
infra/: dns.ts  iam.ts  redis.ts  repo.ts  repository.ts
src/: application.py  bksy.py  bsky.py  cache.py  data.py  data_science.py  machine_learning.py  main.py  notebook.ipynb  streaming.py  tasks.py  telemetry.py  worker.py
todos/: anthropic.md  aws.md  discord.md  github.md  reddit.md  sentry.md  steam.md  youtube.md
