[project]
name = "backend"
version = "0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi (>=0.115.12,<0.116.0)",
  "uvicorn[standard] (>=0.34.0,<0.35.0)",
  "python-dotenv (>=1.1.0,<2.0.0)",
  "slowapi (>=0.1.9,<0.2.0)",
  "atproto (>=0.0.59,<0.0.60)",
  "structlog (>=25.2.0,<26.0.0)",
  "opentelemetry-instrumentation (>=0.52b1,<0.53)",
  "opentelemetry-distro (>=0.52b1,<0.53)",
  "opentelemetry-exporter-otlp (>=1.31.1,<2.0.0)",
  "opentelemetry-api (>=1.31.1,<2.0.0)",
  "sentry-sdk[fastapi] (>=2.24.1,<3.0.0)",
  "opentelemetry-instrumentation-fastapi (>=0.52b1,<0.53)",
  "websockets (<14)",
  "invoke (>=2.2.0,<3.0.0)",
  "redis (>=5.2.1,<6.0.0)",
  "spacy (>=3.8.5,<4.0.0)",
  "nltk (>=3.9.1,<4.0.0)",
  "yake (>=0.4.8,<0.5.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.1"
ptipython = "^1.0.1"
notebook = "^7.3.3"
