[project]
name = "backend"
version = "0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.135.3,<0.136.0",
  "uvicorn[standard]>=0.44.0,<0.45.0",
  "python-dotenv>=1.2.2,<2.0.0",
  "slowapi>=0.1.9,<0.2.0",
  "atproto>=0.0.65,<0.0.66",
  "structlog>=25.5.0,<26.0.0",
  "opentelemetry-instrumentation>=0.62b0,<0.63",
  "opentelemetry-distro>=0.62b0,<0.63",
  "opentelemetry-exporter-otlp>=1.41.0,<2.0.0",
  "opentelemetry-api>=1.41.0,<2.0.0",
  "sentry-sdk[fastapi]>=2.58.0,<3.0.0",
  "opentelemetry-instrumentation-fastapi>=0.62b0,<0.63",
  "websockets>=13,<17",
  "invoke>=3.0.3,<4.0.0",
  "redis>=7.4.0,<8.0.0",
  "spacy>=3.8.14,<4.0.0",
  "nltk>=3.9.4,<4.0.0",
  "yake>=0.7.3,<0.8.0",
  "numpy>=2.4.0,<3.0.0",
]

[dependency-groups]
dev = [
  "black>=26.3.1,<27.0.0",
  "mypy>=1.20.1,<2.0.0",
  "isort>=8.0.1,<9.0.0",
  "ptipython>=1.0.1,<2.0.0",
  "notebook>=7.5.5,<8.0.0",
  "types-requests>=2.33.0.20260408,<3.0.0",
  "pytest>=9.0.3,<10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
